# telegrambot-golang

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  go.mod  go.sum  main.go  railway.yml
.github/workflows/: azure.yml  build.yml  ci.yml  deploy.yml  deploy_ci.yml
CONVERSATIONAL_ML_MODEL/: pyproject.toml
CONVERSATIONAL_ML_MODEL/chatbot/: life.py  main.py
bot/: bot.go  bot_handlerFuncs.go  bot_hlepers.go  bot_inline_keyboard.go  bot_keyboard.go  bot_middlewares.go  cron_tasks.go  handlerFuncs.go  hlepers.go  inline_keyboard.go  keyboard.go  main.go  middlewares.go  texts.go  types.go
cmd/telegrambot/: bot.go  bot_handlerFuncs.go  bot_hlepers.go  bot_inline_keyboard.go  bot_keyboard.go  bot_middlewares.go  cron_tasks.go  main.go  old.go  run_bot.go
images/: a  b  c  d
internal/services/: bible_messages.go  quote.go  types.go
internal/store/: db.sqlite3  errors.go  store.go
logging/: logging.go
